[project]
name = "simian-api"
version = "0.1.0"
description = ""
authors = [{ name = "xxxx", email = "xxx@xxx.com" }]
requires-python = ">=3.12.7"
dependencies = [
  "flask (>=3.1.2,<4.0.0)",
  "python-dotenv (>=1.2.1,<2.0.0)",
  "requests (>=2.32.5,<3.0.0)"
]

# remova a linha abaixo se você não tiver um README.md
readme = "README.md"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
